--- a/react-momentum/QuiteDash/package.json
+++ b/react-momentum/QuiteDash/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
