--- a/react-momentum/QuiteDash/package.json
+++ b/react-momentum/QuiteDash/package.json
@@ -18,7 +18,9 @@
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.2"
+    "react-is": "^19.2.3",
+    "react-router-dom": "^7.8.2",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
